<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">pogorelskayanat@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_icon">Clear Input</string>
    <string name="arrow_back">Return</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="playlist_cover">Playlist Cover</string>
    <string name="ellipse_icon">Small ellipse icon</string>
    <string name="arrow_forward">More</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="renew">Обновить</string>
    <string name="newPlayList">Новый плейлист</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>
    <string name="placeholder_image">Artwork not downloaded yet</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="duration">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playlist_icon">Playlist icon</string>
    <string name="play">Play track icon</string>
    <string name="favorite_list_icon">Favorite list icon</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="image_sad_emoticon">image sad emoticon</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="agreement_header">Соглашение</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="player_completed">00:00</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="empty_image_selection">Не выбрано изображение</string>
    <string name="playlist_string_piece">"Плейлист %s создан"</string>
    <string name="finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="data_loss_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlists_folder_name">playlists</string>
    <string name="playlist_cover_piece">playlist_cover_</string>
    <string name="jpg">.jpg</string>
    <string name="retry">Повторите попытку</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_track_error">Трек уже добавлен в плейлист %s</string>
    <string name="track_added">Добавлено в плейлист %s</string>
    <string name="playlist_update_error">Повторите попытку</string>
    <string name="share_icon">Share icon</string>
    <string name="menu_icon">Menu icon</string>
    <string name="delete_track_question">Хотите удалить трек?</string>
    <string name="answer_negative">Нет</string>
    <string name="answer_positive">Да</string>
    <string name="nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_from_menu">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_named">Хотите удалить плейлист «%s»?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="try_again">Try again</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>
    <plurals name="tracks_quantity_plurals">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <plurals name="playlist_duration_plurals">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
</resources>