<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/backNavBar"
            style="@style/SecondaryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="28dp"
            android:padding="20dp"
            android:text="@string/new_playlist"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/font_size"
            app:drawableStartCompat="@drawable/arrow_back_icon"
            app:layout_constraintBottom_toTopOf="@id/playlistCover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/playlistCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/playlist_cover"
            android:src="@drawable/layer_list_newplaylist_cover"
            app:layout_constraintBottom_toTopOf="@id/playlistTitle"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backNavBar" />

        <EditText
            android:id="@+id/playlistTitle"
            style="@style/CreatePlaylistFields"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/border_edittext"
            android:hint="@string/playlist_title"
            app:layout_constraintBottom_toTopOf="@id/playlistTitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlistCover" />

        <EditText
            android:id="@+id/playlistTitle2"
            style="@style/CreatePlaylistFields"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_edittext"
            android:hint="@string/playlist_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlistTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createButton"
            style="@style/CreateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/selector_create_button"
            android:padding="12dp"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>