<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/errorMessage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/newPlaylistButton"
        style="@style/RenewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/newPlayList"
        app:layout_constraintBottom_toTopOf="@id/placeholderErrorImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistButton"
        tools:listitem="@layout/list_item_playlist" />

    <ImageView
        android:id="@+id/placeholderErrorImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/image_sad_emoticon"
        android:src="@drawable/nothing_found"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/placeholderMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistButton" />

    <TextView
        android:id="@+id/placeholderMessage"
        style="@style/ErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/playlists_empty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderErrorImage" />


</androidx.constraintlayout.widget.ConstraintLayout>
