<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingBottom="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/title_marginHorizontal"
        android:layout_marginTop="@dimen/title_marginTop"
        android:layout_marginBottom="@dimen/title_marginBottom"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/button_paddingStart"
        android:paddingTop="@dimen/button_padding_vertical"
        android:paddingEnd="@dimen/button_paddingEnd"
        android:paddingBottom="@dimen/button_padding_vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search_button"
            android:textAllCaps="false"
            android:textColor="@color/button_name"
            android:textSize="@dimen/font_size"
            app:cornerRadius="@dimen/button_radius"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/button_name" />

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_button"
            android:textAllCaps="false"
            android:textColor="@color/button_name"
            android:textSize="@dimen/font_size"
            app:cornerRadius="@dimen/button_radius"
            app:icon="@drawable/media_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/button_name" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/button_name"
            android:textSize="@dimen/font_size"
            app:cornerRadius="@dimen/button_radius"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/button_name" />

    </LinearLayout>

</LinearLayout>